@@ -1,5 +1,11 @@
 2017-10-10  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_content.js: 
+	Add frameAncestor property to attributes.
+
+	* tryXpath/background/try_xpath_background.js: 
+	Add frameAncestor property to attributes.
+
 	* tryXpath/pages/options.js:
 	Define frameAncestorAttr variable.
 	Add frameAncestor property to defaultAttributes.
